# evm-coin-flip

./: .gitignore  .gitmodules  Makefile  README.md  deployments.json  foundry.toml  measurement.txt  remappings.txt  sample.env
.github/workflows/: deploy.yml  test.yml
app/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  wagmi.config.ts
app/src/: App.tsx  AppBar.tsx  core.d.ts  core.ts  generated.ts  wagmi.ts
app/src/components/: Account.tsx  Balance.tsx  CoinFlip.tsx  NetworkSwitcher.tsx
broadcast/Deploy.s.sol/1115/: run-1694528905.json  run-latest.json
broadcast/Deploy.s.sol/420/: run-1694528859.json  run-1694528866.json  run-latest.json
broadcast/Deploy.s.sol/421613/: run-1694528807.json  run-latest.json
broadcast/Deploy.s.sol/84531/: run-1694528934.json  run-1694528941.json  run-1694528958.json
broadcast/Flip.s.sol/1115/: run-1694529245.json  run-1694529251.json
broadcast/Flip.s.sol/420/: run-1694529284.json  run-1694529291.json
script/: Deploy.s.sol  Flip.s.sol  GetSelectors.s.sol  HelperConfig.s.sol  MnemonicHelper.s.sol  Print.s.sol  UtilsLib.s.sol
script/switchboard/: CreateFunction.s.sol  FundFunction.s.sol  PrintFunction.s.sol  PrintQueue.s.sol  ResetFunctionStatus.s.sol  SetMrEnclave.s.sol  SwitchboardScriptLib.s.sol
src/: CoinFlip.sol
switchboard-function/rust/: .gitignore  Cargo.toml  Dockerfile
switchboard-function/rust/src/: main.rs
switchboard-function/typescript/: .eslintrc.json  Dockerfile  package-lock.json  package.json  tsconfig.json
test/unit/: CoinFlip.t.sol
(+22 files in other folders)
