[workspace]

[package]
name = "evm-coin-flip-function"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "evm-coin-flip-function"
path = "src/main.rs"

[dependencies]
tokio = "^1"
futures = "0.3"
ethers = { version = "2.0.7", features = ["legacy"] }
serde = "^1"
serde_json = "^1"
switchboard-evm = "0.3.20"
switchboard-common = { version = "0.8.15", features = ["client"] }
bytemuck = "1.13"

[dev-dependencies]
hex = { version = "0.4.3", features = ["serde"] }
bincode = "1.3.3"
